--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ Temp/
 Library/
 Dist/
 Assets/AssetStoreTools*
+Logs/
+obj/
 
 # ===================== #
 # MonoDevelop generated #
@@ -14,6 +16,7 @@ Assets/AssetStoreTools*
 *.sln
 *.pidb
 *.userprefs
+*.idea
 
 # ============ #
 # OS generated #
