Ignore Asset Store Tools package

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ Assets/AssetStoreTools*
 Logs/
 obj/
 UserSettings/*
+Packages/com.unity.asset-store-tools/
 
 # ===================== #
 # MonoDevelop generated #
